# ivt-sic-assits-robot

./: BallDetection.hpp  CMakeLists.txt  LineFollow.hpp  README.md  arduino.cpp  ball_detection.cpp  line_follow.cpp  line_follow_backup.cpp  line_follow_superbackupcopy.cpp  line_follow_test.cpp  main.cpp  motor_control.cpp  realsense-test.cpp  realsense-test.py  running.cpp  sech2.cpp
tests/: line_follower_slew_rate_test.cpp
